fix: change align in OrderTabel status and add spacing in order detai… (#582)  #patch
* fix: change align in OrderTabel status and add spacing in order detail status

* fix: update storyshot of OrderTabel molecule

--- a/src/userAccount/views/OrderDetails/scss/index.scss
+++ b/src/userAccount/views/OrderDetails/scss/index.scss
@@ -73,6 +73,7 @@
   }
   &__tile-alert-fuilfill {
     margin-top: 0.25rem;
+    margin-bottom: 1rem;
     font-size: 00.75rem;
   }
   &__tile-alert-fulfill-icon {
